--- a/django_community/templates/base.html
+++ b/django_community/templates/base.html
@@ -3,10 +3,13 @@
 	<head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
+	<link href="{{ STATIC_URL }}css/main.css" rel="stylesheet" media="screen">
 	</head>
 	<body>
-		{% block content %}
-		{% endblock %}
+		<div class="center">
+			{% block content %}
+			{% endblock %}
+		</div>
 		<script src="http://code.jquery.com/jquery.js"></script>
 		<script src="{{ STATIC_URL }}bootstrap/js/bootstrap.min.js"></script>
 	</body>
