Added lots of lots of stuff, probably should've made two seperate commits. Added Lobbys, added game, added lobby creation, added lobby view (some forms). And changed some of the models (data structure)

--- a/django_community/templates/member/index.html
+++ b/django_community/templates/member/index.html
@@ -12,7 +12,7 @@
 	<div>
 		<h3>{{ profile.user.username }} ({{ profile.user.firstname }} {{ profile.user.lastname }})</h3>
 		<ul>
-			<li>You play as {{ profile.playerclass }}</li>
+			<li>You play as <b>{{ profile.playerclass }}</b><h4>{{ profile.experience }} XP</h4></li>
 		</ul>
 		<hr />
 		<div>
