--- a/django_community/templates/base.html
+++ b/django_community/templates/base.html
@@ -10,7 +10,8 @@
 			{% block content %}
 			{% endblock %}
 		</div>
-		<script src="http://code.jquery.com/jquery.js"></script>
+		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+		<script src="http://code.jquery.com/jquery-migrate-1.1.1.min.js"></script>
 		<script src="{{ STATIC_URL }}bootstrap/js/bootstrap.min.js"></script>
 	</body>
 </html>
