--- a/django_community/templates/lobbys/show.html
+++ b/django_community/templates/lobbys/show.html
@@ -1,8 +1,5 @@
-{% extends "base.html" %}
-
-{% block title %}Viewing Lobby > {{ lobby }} {% endblock %}
-
-{% block content %}
+{% extends "base.html" %} {% block title %}Viewing Lobby > {{ lobby }}
+{% endblock %} {% block content %}
 <div>
 	<h1>{{ lobby }}</h1>
 	<p class="lead">by {{ lobby.owner }}</p>
@@ -14,9 +11,9 @@
 	<hr />
 	<div>
 		<ul>
-		{% for player in lobby.players.all %}
-			<li>player (Kick) (Add as Friend) (Send Message)</li>
-		{% endfor %}
+			{% for player in lobby.players.all %}
+			<li>player (Kick) (Add as Friend) (Send Message)</li> 
+			{% endfor %}
 		</ul>
 	</div>
 </div>
